# lzr

./: .gitignore  README.md  firebase.json  firestore.rules  package.json  pnpm-lock.yaml  turbo.json
apps/atlas/: .env.dev  overlay.html  package-lock.json  package.json  rust-analyzer.cfg  tsconfig.json  vite.config.ts
apps/atlas/.VSCodeCounter/2023-02-25_15-43-41/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
apps/atlas/scripts/: generate-csp.mjs
apps/atlas/src/: main.tsx
apps/atlas/src-tauri/: Cargo.toml  tauri.conf.json
apps/atlas/src-tauri/src/: main.rs
apps/atlas/src/configs/: firebase.ts
apps/atlas/src/constants/: websocket.ts
apps/atlas/src/hooks/: useStreamerBotClient.tsx
apps/atlas/src/lzrStore/: lzrStore.ts  lzrStoreManager.ts
apps/atlas/src/pages/: app.tsx  home.tsx  index.tsx  landing.tsx  user.tsx
apps/atlas/src/provider/: firebase.tsx
apps/atlas/src/redux/: models.ts  store.ts
apps/atlas/src/styles/: app.css  sharedLayout.css  twitchSettings.css
apps/atlas/src/types/: user.ts
apps/atlas/src/utils/: apiWrapper.ts  createRandString.ts  createReqBody.ts  fetchApi.ts  lzrStore.ts  rtc.ts  storeWatch.ts  user.ts
apps/bast/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
apps/bast/src/components/: current-song.tsx  fire-wrapper.tsx  route-auth.tsx  song-progress.tsx
apps/bast/src/configs/: auth.ts  firebase.ts
apps/bast/src/pages/: _app.tsx  auth.tsx  (+6 more)
apps/nyx/: package.json  tsconfig.json
apps/nyx/src/: index.ts
(+111 files in other folders)
